--- a/css/styles.css
+++ b/css/styles.css
@@ -246,7 +246,11 @@ li{
 
 }
 
-@media screen and (max-width: 375px){}
+@media screen and (max-width: 375px){
+	.slider{
+		display: none;
+	}
+}
 
 
 /* Dispositivo sm */
@@ -281,14 +285,6 @@ li{
 	header .menu a {
 		width: 100%;
 	}
-
-	.portafolio .galeria .contenedor-imagen:nth-child(1) {order: 1;}
-	.portafolio .galeria .contenedor-imagen:nth-child(2) {order: 3;}
-	.portafolio .galeria .contenedor-imagen:nth-child(3) {order: 6;}
-	.portafolio .galeria .contenedor-imagen:nth-child(4) {order: 2;}
-	.portafolio .galeria .contenedor-imagen:nth-child(5) {order: 5;}
-	.portafolio .galeria .contenedor-imagen:nth-child(6) {order: 4;}
-	.portafolio .galeria .contenedor-imagen:nth-child(7) {order: 7;}
 }
 
 /* Dispositivo xl */
